Fixes extra spacing in first carousel on home and keeps 4 testimonials

--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -3,9 +3,14 @@
     Description: Represent the basics styles for main layout and body element 
 ******************************************************************************************/
     
-    .slider {
+    .slider-testimonial {
         .slick-slide {
             min-height: 550px;
+        }
+    }
+    
+    .slider {
+        .slick-slide {
             &:active,
             &:focus,
             &:hover {
