--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -161,7 +161,7 @@
             .box-text2 {
                 background-color: $clr-white;
                 padding: 70px 45px 90px;
-                margin-left: -50px;
+                margin-left: 0;
                 margin-top: -93px;
             }
             .text2 {
