--- a/sass/pages/questions.scss
+++ b/sass/pages/questions.scss
@@ -31,6 +31,11 @@
             font-size: $font-size-h1;
         }
     }
+    @media screen and (max-width: 760px) {
+        .banner.banner-simple .bg-title .title {
+            font-size: 1.05em;
+        }
+    }
     /*****************************************************************************************/
     /******************************************************************************************
     Class: 		$media queries
